--- a/public/templates/products/search.html
+++ b/public/templates/products/search.html
@@ -18,15 +18,18 @@
 							</div>
 						</div>
 						<div class="brand-price bgffffff"> 
-							<div ng-if="ctrl.brands.length > 0" class="brand">
+							<div class="brand">
 								<div class="pb10 fw">THƯƠNG HIỆU</div>
 								<div class="pb10">
-									<div ng-repeat="brand in ctrl.brands track by $index">
-										<div ng-if="brand.id == ctrl.brandId" ng-click="ctrl.openBrand(brand.id, 1)">
-											<input type="checkbox" checked value="{{brand.id}}" /><span>{{ brand.name | limitTo: 20 }}{{brand.name.length > 20 ? '...' : ''}}</span>
+									<div ng-if="ctrl.brandId !== ''" ng-click="ctrl.openBrand()">
+										<input type="checkbox" /><span>Tất cả</span>
+									</div>
+									<div ng-repeat="brand in ctrl.brands track by $index" ng-click="ctrl.openBrand(brand.id)">
+										<div ng-if="brand.id == ctrl.brandId">
+											<input type="checkbox" checked value="{{brand.id}}" /><span>{{brand.name | limitTo: 20}}{{brand.name.length > 20 ? '...' : ''}}</span>
 										</div>
-										<div ng-if="brand.id != ctrl.brandId" ng-click="ctrl.openBrand(brand.id)">
-											<input type="checkbox" value="{{brand.id}}" /><span>{{ brand.name | limitTo: 20 }}{{brand.name.length > 20 ? '...' : ''}}</span>
+										<div ng-if="brand.id != ctrl.brandId">
+											<input type="checkbox" value="{{brand.id}}" /><span>{{brand.name | limitTo: 20}}{{brand.name.length > 20 ? '...' : ''}}</span>
 										</div>
 									</div>
 								</div>
@@ -35,25 +38,25 @@
 								<div class="pb10 fw">KHOẢNG GIÁ</div>
 								<div class="pb10">
 									<div ng-if="'0,500000' == ctrl.ratePrice">
-										<div ng-click="ctrl.openRatePrice('0,500000', 1)"><input type="checkbox" checked /><span>Dưới 500.000</span></div>
+										<div><input type="checkbox" checked /><span>Dưới 500.000</span></div>
 									</div>
 									<div ng-if="'0,500000' != ctrl.ratePrice">
 										<div ng-click="ctrl.openRatePrice('0,500000')"><input type="checkbox" /><span>Dưới 500.000</span></div>
 									</div>
 									<div ng-if="'500000,1500000' == ctrl.ratePrice">
-										<div ng-click="ctrl.openRatePrice('500000,1500000', 1)"><input type="checkbox" checked /><span>500.000 - 1.500.000</span></div>
+										<div><input type="checkbox" checked /><span>500.000 - 1.500.000</span></div>
 									</div>
 									<div ng-if="'500000,1500000' != ctrl.ratePrice">
 										<div ng-click="ctrl.openRatePrice('500000,1500000')"><input type="checkbox" /><span>500.000 - 1.500.000</span></div>
 									</div>
 									<div ng-if="'1500000,2500000' == ctrl.ratePrice">
-										<div ng-click="ctrl.openRatePrice('1500000,2500000', 1)"><input type="checkbox" checked /><span>1.500.000 - 2.500.000</span></div>
+										<div><input type="checkbox" checked /><span>1.500.000 - 2.500.000</span></div>
 									</div>
 									<div ng-if="'1500000,2500000' != ctrl.ratePrice">
 										<div ng-click="ctrl.openRatePrice('1500000,2500000')"><input type="checkbox" /><span>1.500.000 - 2.500.000</span></div>
 									</div>
 									<div ng-if="2500000 == ctrl.ratePrice">
-										<div ng-click="ctrl.openRatePrice('2500000', 1)"><input type="checkbox" checked /><span>Trên 2.500.000</span></div>
+										<div><input type="checkbox" checked /><span>Trên 2.500.000</span></div>
 									</div>
 									<div ng-if="2500000 != ctrl.ratePrice">
 										<div ng-click="ctrl.openRatePrice('2500000')"><input type="checkbox" /><span>Trên 2.500.000</span></div>
@@ -74,8 +77,8 @@
 									</div>
 									<div class="title"><a href="javascript:;" ng-click="ctrl.openDetail(product.id)">{{product.name | limitTo: 60}}{{product.name.length > 60 ? '...' : ''}}</a></div>
 									<div class="price">
-										<p class="discount"><br ng-if="product.compare_at_price <= product.price" />{{product.compare_at_price | number}} đ</p>
-										<span ng-if="product.compare_at_price > product.price">{{product.price | number}} đ</span>
+										<p class="discount"><br ng-if="product.compare_at_price <= product.price" />{{product.compare_at_price | number}} VND</p>
+										<span ng-if="product.compare_at_price > product.price">{{product.price | number}} VND</span>
 									</div>
 									<div class="buy"><a href="javascript:;"><div ng-click="ctrl.addProductToCart(product.id)">Thêm vào giỏ hàng</div></a></div>
 								</div>
@@ -84,11 +87,11 @@
 						<div class="clearfix"></div>
 						<div class="paging" ng-if="ctrl.paging.length && ctrl.hasData">
 							<ul>
-								<li ng-if="ctrl.pageCurrent > 5" ng-click="ctrl.openPage(1)" ><a>&lsaquo;</a></li>
-								<li ng-repeat="(key, value) in ctrl.paging" ng-click="ctrl.openPage(value)" ng-class="{true: 'active', false: ''}[ctrl.pageCurrent == value]"><a>{{value}}</a></li>
-								<li ng-if="ctrl.pageCurrent < +ctrl.totalPage - 4" ng-click="ctrl.openPage(ctrl.totalPage)" ><a>&rsaquo;</a></li>
+								<li ng-if="ctrl.pageCurrent > 5" ng-click="ctrl.openPage(1)" ><a href="javascript:;">&lsaquo;</a></li>
+								<li ng-repeat="(key, value) in ctrl.paging" ng-click="ctrl.openPage(value)" ng-class="{true: 'active', false: ''}[ctrl.pageCurrent == value]"><a href="javascript:;">{{value}}</a></li>
+								<li ng-if="ctrl.pageCurrent < +ctrl.total - 4" ng-click="ctrl.openPage(ctrl.total)" ><a href="javascript:;">&rsaquo;</a></li>
 							</ul>
-							<div class="right">TỪ {{+ctrl.offset + 1}} ĐẾN {{+ctrl.offset + +ctrl.limit}} CỦA {{+ctrl.totalRecord}} SẢN PHẨM <span ng-if="ctrl.hasData">|<span> </div>
+							<div class="right">TỪ {{+ctrl.offset + 1}} ĐẾN {{+ctrl.offset + +ctrl.limit}} CỦA {{+ctrl.total * +ctrl.limit}} SẢN PHẨM <span ng-if="ctrl.hasData">|<span> </div>
 						</div>
 						&nbsp
 						<div class="clearfix"></div>
@@ -139,15 +142,6 @@
 		</div>
 	</div>
 </section>
-<!-- The Modal -->
-<div id="popupInfo" class="modal">
-	<!-- Modal content -->
-	<div class="modal-content">
-		<div class="clearfix"></div>
-		<div class="title">Thông báo <a class="close right" rel="modal:close">x</a></div>
-		<div class="text-center content">{{ctrl.msgPopup}}</div>
-	</div>
-</div>
 <script>
 	$(document).ready(function(){
 		$('.product input').iCheck({
