--- a/public/templates/theme-v2/account/login.html
+++ b/public/templates/theme-v2/account/login.html
@@ -1,64 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-</head>
-<body>
-
-<header class="fixed-top border-bottom-1 bg-white">
-    <div class="container">
-        <div class="row py16 align-items-center">
-            <div class="col-1">
-                <div class="nav-icon"><span class="icon-menu"></span></div>
-            </div>
-            <div class="col-2">
-                <img class="logo w-75" src="../../../assets/images/logo_vnshop.png" alt="logo">
-            </div>
-            <div class="col-5 border-right-1">
-
-                <div class="field">
-                    <label for="field-search">
-                        <span class="placeholder content">Tìm kiếm</span>
-                    </label>
-                    <input class="input-search content" id="field-search" type="text">
-                    <div class="field-icon nav-icon">
-                        <span class="icon-Search"></span>
-                    </div>
-                </div>
-
-            </div>
-            <div class="col-2">
-                <div class="nav-icon icon-size-24 text-grey"><span class="icon-cart"></span><span class="content">&nbsp;&nbsp;Giỏ hàng của tôi</span>
-                </div>
-            </div>
-            <div class="col-2">
-                <div class="nav-icon icon-size-24 text-grey"><span class="icon-user"></span><span class="content">&nbsp;&nbsp;Đào Thái Hà</span>
-                </div>
-            </div>
-        </div>
-    </div>
-</header>
-
 <main>
     <div class="container py24">
         <div class="row">
             <ol class="breadcrumb content">
-                <li class="breadcrumb-item"><a href="#">VNSHOP</a></li>
+                <li class="breadcrumb-item"><a href="/#">VNSHOP</a></li>
                 <li class="breadcrumb-item active">Đăng nhập</li>
             </ol>
         </div>
 
         <div class="row mt16 content py16">
             <div class="col-6 offset-1 text-grey">
-                <label for="form-email">Email:</label>
-                <input class="input-control" id="form-email" type="email">
-                <label class="mt32" for="form-password">Mật khẩu:</label>
-                <input class="input-control" id="form-password" type="password">
+                <form class="from-register" name="myForm">
+                    <label for="email">Email:</label>
+                    <input class="input-control" type="email" ng-model="ctrl.email" id="email" required ng-minlength="3" type="email">
+                    <label class="mt32" for="password">Mật khẩu:</label>
+                    <input class="input-control" ng-model="ctrl.password" id="password" required ng-minlength="1" type="password">
 
-                <div class="d-flex justify-content-between mt16">
-                    <div class="text-blue">Đăng kí tài khoản mới</div>
-                    <div class="text-grey">Bạn quên mật khẩu</div>
-                </div>
-                <button class="button-normal-grey bg-blue w-100 mt32" type="button">Đăng nhập</button>
+                    <div class="d-flex justify-content-between mt16">
+                        <div class="text-blue" ng-click="ctrl.openSignin()">Đăng kí tài khoản mới</div>
+                        <div class="text-grey" ng-click="ctrl.openForgotPassword()">Bạn quên mật khẩu</div>
+                    </div>
+                    <div>{{ctrl.message}}</div>
+                    <button class="button-normal-grey bg-blue w-100 mt32" type="button" ng-click="ctrl.login()" type="submit" ng-disabled="myForm.$invalid">Đăng nhập</button>
+                </form>
             </div>
 
             <div class="col-1 text-grey d-flex flex-column align-items-center">
@@ -69,17 +32,19 @@
 
             <div class="col-4 text-grey">
                 <div>Đăng nhập với</div>
-                <div class="row mt8">
-                    <div class="col-6">
-                        <div class="border-box-blue d-flex justify-content-between align-items-center">
-                            <img class="h-100" src="../../../assets/images/box-fb.png" alt="">
-                            <div class="text-blue px8">FACEBOOK</div>
+                <div ng-if="!ctrl.isLoginMobile">
+                    <div class="row mt8">
+                        <div class="col-6">
+                            <div class="border-box-blue d-flex justify-content-between align-items-center" ng-click="ctrl.authenticate('facebook')">
+                                <img class="h-100" src="/assets/images/box-fb.png" alt="">
+                                <div class="text-blue px8">FACEBOOK</div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-6">
-                        <div class="border-box-blue d-flex justify-content-between align-items-center">
-                            <img class="h-100" src="../../../assets/images/box-google.png" alt="">
-                            <div class="text-blue px8">GOOGLE</div>
+                        <div class="col-6">
+                            <div class="border-box-blue d-flex justify-content-between align-items-center" ng-click="ctrl.authenticate('google')">
+                                <img class="h-100" src="/assets/images/box-google.png" alt="">
+                                <div class="text-blue px8">GOOGLE</div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -90,102 +55,23 @@
                         <input class="input-control h-100" type="number">
                     </div>
                     <div class="flex-base-6">
-                        <button class="button-normal-grey bg-blue w-100" type="button">Đăng nhập</button>
+                        <button class="button-normal-grey bg-blue w-100" type="button" ng-click="ctrl.loginMobile()">Đăng nhập</button>
                     </div>
                 </div>
 
-                <div class="mt32">Nhập mã xác nhận từ điện thoại:</div>
-                <div class="d-flex mt8">
-                    <div class="flex-base-6 bg-grey text-center text-white py16">
-                       Nhập mã xác nhận
+                <div ng-if="ctrl.isLoginMobile">
+                    <div class="mt32">Nhập mã xác nhận từ điện thoại:</div>
+                    <div class="d-flex mt8">
+                        <div class="flex-base-6 bg-grey text-center text-white py16">
+                            Nhập mã xác nhận
+                        </div>
+                        <div class="flex-base-6">
+                            <input class="input-control h-100" type="number">
+                        </div>
                     </div>
-                    <div class="flex-base-6">
-                        <input class="input-control h-100" type="number">
-                    </div>
+                    <button class="button-normal-grey w-100 mt32 bg-blue py16" type="button">Xác nhận</button>
                 </div>
-
-                <button class="button-normal-grey w-100 mt32 bg-blue py16" type="button">Xác nhận</button>
-
-
-
             </div>
         </div>
-
-
     </div>
 </main>
-
-<footer class="border-top-1">
-    <div class="container py16">
-        <div class="row py16 d-flex align-items-center">
-            <div class="col-3">
-                <img class="logo w-50" src="../../../assets/images/logo_vnshop.png" alt="logo">
-            </div>
-            <div class="col-3">
-                <div class="content-footer text-bold text-uppercase">
-                    Liên lạc
-                </div>
-            </div>
-            <div class="col-3">
-                <div class="content-footer text-bold text-uppercase">
-                    Vnshop
-                </div>
-            </div>
-            <div class="col-3">
-                <div class="content-footer text-bold text-uppercase">
-                    Chăm sóc khách hàng
-                </div>
-            </div>
-        </div>
-
-        <div class="row py16">
-            <div class="col-3">
-                <div class="content-footer">Công ty TNHH Vnshop</div>
-                <div class="content-footer mt8">Tầng 7 Hoàng Hòa Thám</div>
-                <div class="content-footer mt8">Thụy Khê Hà Nội</div>
-            </div>
-            <div class="col-3">
-                <div class="content-footer"><img src="../../../assets/images/icon-call.png" alt="">&nbsp;&nbsp;1900 1542</div>
-                <div class="content-footer text-uppercase mt8"><img src="../../../assets/images/icon-mail.png" alt="">&nbsp;&nbsp;suport@vn.com
-                </div>
-            </div>
-            <div class="col-3 text-uppercase">
-                <div class="content-footer">Giới thiệu</div>
-                <div class="content-footer mt8">Tuyển dụng</div>
-                <div class="content-footer mt8">Đối tác</div>
-            </div>
-            <div class="col-3 text-uppercase">
-                <div class="content-footer">Hỏi đáp</div>
-                <div class="content-footer mt8">Chính sách đổi trả</div>
-                <div class="content-footer mt8">Điều khoản quy định</div>
-                <div class="content-footer mt8">Giao hàng</div>
-                <div class="content-footer mt8">Thuế</div>
-            </div>
-        </div>
-
-    </div>
-</footer>
-<!-- jQuery first, then Tether, then Bootstrap JS. -->
-<script src="js/jquery-3.2.1.min.js"></script>
-<script src="js/tether.js"></script>
-<script src="js/bootstrap.min.js"></script>
-
-<script>
-    (function () {
-
-        var fieldSearch = $('#field-search');
-        fieldSearch.focus(function () {
-            $('.field label').hide();
-        });
-
-        fieldSearch.blur(function () {
-            if ($(this).val() === '') {
-                $('.field label').show();
-            }
-        });
-
-
-    })();
-</script>
-</body>
-</html>
